# remodel_unox

./: README.md
preparation_dataset/: .env  config.py  create_dataset_regression_unox.ipynb  dataset.py  main.py  nordland.geojson  prepare_dataset.py  pyproject.toml  read_table.py
preparation_dataset/data/: nordic_stations_df_new.csv  occupation_df.csv  poi_features_df.csv  static_occupation_df.csv  station_with_poi_df.csv  station_with_road_df.csv  timeseries_df.csv
preparation_dataset/data_p/: nordic_stations_df_new.csv  occupation_df.csv  poi_features_df.csv  roads_df.csv  static_occupation_df.csv  station_with_poi_df.csv  station_with_road_df.csv  timeseries_df.csv
preparation_dataset/unox/: raw_road_df.csv  road.py
preparation_dataset/unox/data_nobil_hpc_100/: nordic_stations_df_new.csv  occupation_df.csv  poi_features_df.csv  roads_df.csv  static_occupation_df.csv  station_with_poi_df.csv  station_with_road_df.csv
